--- a/.github/workflows/pygbag.yml
+++ b/.github/workflows/pygbag.yml
@@ -1,7 +1,7 @@
 name: Build and Deploy (pygbag)
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   workflow_dispatch:
 
 permissions:
@@ -12,15 +12,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-      - name: Install pygbag
-        run: pip install --upgrade pygbag
-      - name: Build web
-        run: python -m pygbag --out build/web .
-      - name: Deploy to gh-pages
-        uses: peaceiris/actions-gh-pages@v3
+      - run: pip install --upgrade pygbag
+      - run: python -m pygbag --out build/web .
+      - run: ls -lah build || true
+      - run: test -d build/web || (echo "no build/web output" && exit 1)
+      - run: touch build/web/.nojekyll
+      - uses: peaceiris/actions-gh-pages@v3
         with:
+          publish_branch: gh-pages
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: build/web
