--- a/.github/workflows/pygbag.yml
+++ b/.github/workflows/pygbag.yml
@@ -1,24 +1,23 @@
 name: Build and Deploy (pygbag)
 on:
-  push:
-    branches: [main]
+  push: { branches: [main] }
   workflow_dispatch:
 
-permissions:
-  contents: write
+permissions: { contents: write }
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
+        with: { fetch-depth: 0 }
       - uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
-      - run: pip install --upgrade pygbag
-      - run: python -m pygbag --out build/web .
+        with: { python-version: '3.11' }
+      - run: python -V; pip -V
+      - run: pip install --upgrade pygbag pygame-ce # pygbag targets pygame-ce :contentReference[oaicite:0]{index=0}
+      # optional if you keep requirements.txt
+      - run: if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - run: python -m pygbag --out build/web . # needs main.py at repo root and async-aware loop :contentReference[oaicite:1]{index=1}
       - run: ls -lah build || true
       - run: test -d build/web || (echo "no build/web output" && exit 1)
       - run: touch build/web/.nojekyll
